lab1/Test/L1-A-13-0.output
Error Type A at Line 1
Error Type B at Line 5
Error Type A at Line 5
Error Type B at Line 7
Error Type B at Line 11
Error Type B at Line 12
Error Type A at Line 14
Error Type A at Line 15
Error Type B at Line 16
Error Type B at Line 17
Error Type B at Line 19
Error Type A at Line 19
Error Type B at Line 23
